feat: Add PassManager and Pass registration example (#54)
Add Pass and PassManager here. Passes should be implemented in C++ for
performance, while PassManager is implemented in Python for flexibility.

---------

Co-authored-by: zhusy54 <zhusiyu1@hisilicon.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,7 @@ set(PYPTO_SOURCES
     src/ir/transform/python_printer.cpp
     src/ir/transform/structural_hash.cpp
     src/ir/transform/structural_equal.cpp
+    src/ir/transform/passes/identity_pass.cpp
     src/ir/serialization/serializer.cpp
     src/ir/serialization/deserializer.cpp
     src/ir/serialization/type_registry.cpp
